--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,12 @@
         <div id="menu">
           <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="http://gdgazores.esy.es/" target="_blank">GDGAzores</a></li>
+            <li><a href="https://plus.google.com/108643552146544275886" target="_blank">GDGBraga</a></li>
+            <li><a href="http://gdgcoimbra.xyz/" target="_blank">GDGCoimbra</a></li>
+            <li><a href="https://www.gdglisbon.xyz/" target="_blank">gdglisbon.xyz</a></li>
+            <li><a href="http://www.gdgporto.xyz/" target="_blank">gdgporto.xyz</a></li>
+            <!--
             {% for my_page in site.pages %}
             {% if my_page.title %}
             <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
@@ -17,6 +23,7 @@
             <li><a href="#">Log In</a></li>
             <li><a href="{{ "/feed.xml" | prepend: site.baseurl }}"
                    class="icon fa-feed"> RSS Feed</a></li>
+            -->
           </ul>
         </div>
       </li>
