removed .xyz from menu links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,8 @@
             <li><a href="http://gdgazores.esy.es/" target="_blank">GDGAzores</a></li>
             <li><a href="https://plus.google.com/108643552146544275886" target="_blank">GDGBraga</a></li>
             <li><a href="http://gdgcoimbra.xyz/" target="_blank">GDGCoimbra</a></li>
-            <li><a href="https://www.gdglisbon.xyz/" target="_blank">gdglisbon.xyz</a></li>
-            <li><a href="http://www.gdgporto.xyz/" target="_blank">gdgporto.xyz</a></li>
+            <li><a href="https://www.gdglisbon.xyz/" target="_blank">GDGLisboa</a></li>
+            <li><a href="http://www.gdgporto.xyz/" target="_blank">GDGPorto</a></li>
             <!--
             {% for my_page in site.pages %}
             {% if my_page.title %}
