Added GDGLeiria Info

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
             <li><a href="http://gdgcoimbra.xyz/" target="_blank">GDGCoimbra</a></li>
             <li><a href="https://www.gdglisbon.xyz/" target="_blank">GDGLisboa</a></li>
             <li><a href="http://www.gdgporto.xyz/" target="_blank">GDGPorto</a></li>
+            <li><a href="http://www.gdgleiria.xyz/" target="_blank">GDGLeiria</a></li>
             <!--
             {% for my_page in site.pages %}
             {% if my_page.title %}
