--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <div id="menu">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="http://gdgazores.esy.es/" target="_blank">GDGAzores</a></li>
+            <li><a href="https://gdgazores.xyz/" target="_blank">GDGAzores</a></li>
             <li><a href="https://plus.google.com/108643552146544275886" target="_blank">GDGBraga</a></li>
             <li><a href="http://gdgcoimbra.xyz/" target="_blank">GDGCoimbra</a></li>
             <li><a href="https://www.gdglisbon.xyz/" target="_blank">GDGLisboa</a></li>
