--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,7 @@
             <li><a href="https://gdgazores.xyz/" target="_blank">GDGAzores</a></li>
             <li><a href="https://plus.google.com/108643552146544275886" target="_blank">GDGBraga</a></li>
             <li><a href="http://gdgcoimbra.xyz/" target="_blank">GDGCoimbra</a></li>
+            <li><a href="https://gdgfaro.xyz/" target="_blank">GDGFaro</a></li>
             <li><a href="https://www.gdglisbon.xyz/" target="_blank">GDGLisboa</a></li>
             <li><a href="http://www.gdgporto.xyz/" target="_blank">GDGPorto</a></li>
             <li><a href="http://www.gdgleiria.xyz/" target="_blank">GDGLeiria</a></li>
