Fix website build

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -15,8 +15,8 @@
     <div id="page-wrapper">
 
       {% include header.html %}
+      {% include index.html %}
 
-      {{ content }}
 
       {% include footer.html %}
 
