--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,12 @@
   <!--[if lte IE 8]><link rel="stylesheet" href="{{ "/css/ie8.css" | prepend: site.baseurl }}" /><![endif]-->
   <!--[if lte IE 9]><link rel="stylesheet" href="{{ "/css/ie9.css" | prepend: site.baseurl }}" /><![endif]-->
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <!-- Social: Facebook / Open Graph -->
+  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" /> 
+  <meta property="og:site_name" content="{{ site.title }}" /> 
+  <meta property="og:type" content="website" /> 
+  <meta property="og:url" content="{{ site.url }}" />
+  <meta property="og:image" content="{{ site.socialImageSrcFacebook | prepend: site.baseurl | prepend: site.url }}" />
+  <meta property="og:description" content="{{ site.description }}" />
+  <meta property="fb:app_id" content="{{ site.facebookAppId }}"/> 
 </head>
