--- a/_includes/index.html
+++ b/_includes/index.html
@@ -28,59 +28,65 @@
 <!-- Two -->
 <section id="two" class="wrapper alt style2">
 	<section class="spotlight">
-		<div class="image"><img src="images/gdgazores.jpg" alt="" /></div><div
-			class="content">
+		<div class="image"><img src="/images/gdgazores.jpg" alt="" /></div>
+		<div class="content">
 			<h2>GDGAzores</h2>
 			<p><a href="https://gdgazores.xyz/" target="_blank">gdgazores</a></p>
 			<!--<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>-->
 		</div>
 	</section>
 	<section class="spotlight">
-		<div class="image"><img src="images/gdgbraga.jpg" alt="" /></div><div
-			class="content">
+		<div class="image"><img src="/images/gdgbraga.jpg" alt="" /></div>
+		<div class="content">
 			<h2>GDGBraga</h2>
-			<p><a href="https://plus.google.com/108643552146544275886" target="_blank">Google+
-					Braga</a></p>
+			<p><a href="https://www.meetup.com/GDG-Braga/" target="_blank">Meetup</a></p>
 		</div>
 	</section>
 	<section class="spotlight">
-		<div class="image"><img src="images/gdgcoimbra.jpg" alt="" /></div><div
-			class="content">
+		<div class="image"><img src="/images/gdgcastelobranco.jpg" alt="" /></div>
+		<div class="content">
+			<h2>GDG Castelo Branco</h2>
+			<p><a href="https://gdg.community.dev/gdg-castelo-branco/" target="_blank">Community</a></p>
+		</div>
+	</section>
+	<section class="spotlight">
+		<div class="image"><img src="/images/gdgcoimbra.jpg" alt="" /></div>
+		<div class="content">
 			<h2>GDGCoimbra</h2>
 			<p><a href="http://gdgcoimbra.xyz/" target="_blank">gdgcoimbra.xyz</a></p>
 		</div>
 	</section>
 	<section class="spotlight">
-		<div class="image"><img src="images/gdgfaro.jpg" alt="" /></div><div
-			class="content">
+		<div class="image"><img src="/images/gdgfaro.jpg" alt="" /></div>
+		<div class="content">
 			<h2>GDGFaro</h2>
 			<p><a href="http://gdgfaro.xyz/" target="_blank">gdgfaro.xyz</a></p>
 		</div>
 	</section>
 	<section class="spotlight">
-		<div class="image"><img src="images/gdgleiria.jpg" alt="" /></div><div
-			class="content">
+		<div class="image"><img src="/images/gdgleiria.jpg" alt="" /></div>
+		<div class="content">
 			<h2>GDGLeiria</h2>
 			<p><a href="http://www.gdgleiria.xyz/" target="_blank">gdgleiria.xyz</a></p>
 		</div>
 	</section>
 	<section class="spotlight">
-		<div class="image"><img src="images/gdglisboa.jpg" alt="" /></div><div
-			class="content">
+		<div class="image"><img src="/images/gdglisboa.jpg" alt="" /></div>
+		<div class="content">
 			<h2>GDGLisboa</h2>
 			<p><a href="https://www.gdglisbon.xyz/" target="_blank">gdglisbon.xyz</a></p>
 		</div>
 	</section>
 	<section class="spotlight">
-		<div class="image"><img src="images/gdgmadeira.jpg" alt="" /></div><div
-			class="content">
+		<div class="image"><img src="/images/gdgmadeira.jpg" alt="" /></div>
+		<div class="content">
 			<h2>GDGMadeira</h2>
 			<p><a href="https://www.gdgmadeira.xyz/" target="_blank">gdgmadeira.xyz</a></p>
 		</div>
 	</section>
 	<section class="spotlight">
-		<div class="image"><img src="images/gdgporto.jpg" alt="" /></div><div
-			class="content">
+		<div class="image"><img src="/images/gdgporto.jpg" alt="" /></div>
+		<div class="content">
 			<h2>GDGPorto</h2>
 			<p><a href="http://www.gdgporto.xyz/" target="_blank">gdgporto.xyz</a></p>
 		</div>
